ordersystem/k8s/ordersystem_depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-deployment
  namespace: wg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ordersystem
  template:
    metadata:
      labels:
        app: ordersystem
    spec:
      containers:
        - name: ordersystem
        # aws의 ecr 주소 사용
          image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/woongi-ordersystem:latest
          ports:
          - containerPort: 8080
          resources:
          # 최대 할당 가능량
            limits:
              cpu: "1"
              memory: "500Mi"
            # 최소 할당량
            requests:
              cpu: "0.5"
              memory: "250Mi"
          readinessProbe:
            httpGet:
              path: /product/list
              port: 8080
            # 컨테이너 시작 후 지연시간 설정
            initialDelaySeconds: 10
            # 확인 반복 주기
            periodSeconds: 10
            # 요청 타임아웃 설정
            timeoutSeconds: 1
            # 성공 인식 횟수 설정
            successThreshold: 1
            # 연속 실패 횟수 : 연속적으로 5번을 실패하면 건강하지 않은 상태로 판단하여 기존서버 종료시키지 않음
            failureThreshold: 5
