ordersystem/k8s/ordersystem_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: wg
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.yeskiticket.shop"
    secretName: pyowoongi-com-tls
  rules:
  - host: server.yeskiticket.shop
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ordersystem-service
            port:
              number: 80
